parser.out
Grammar:

Rule 0     S' -> CompilationUnit
Rule 1     CompilationUnit -> _1_ClassDefinition_repeat VOID KXI2022 MAIN LPAREN RPAREN MethodBody  [precedence=left, level=11]
Rule 2     _1_ClassDefinition_repeat -> _1_ClassDefinition_items
Rule 3     _1_ClassDefinition_repeat -> <empty>
Rule 4     _1_ClassDefinition_items -> _1_ClassDefinition_items _1_ClassDefinition_item
Rule 5     _1_ClassDefinition_items -> _1_ClassDefinition_item
Rule 6     _1_ClassDefinition_item -> ClassDefinition
Rule 7     ClassDefinition -> CLASS IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat RBRACE
Rule 8     _2_ClassMemberDefinition_repeat -> _2_ClassMemberDefinition_items
Rule 9     _2_ClassMemberDefinition_repeat -> <empty>
Rule 10    _2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_items _2_ClassMemberDefinition_item
Rule 11    _2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_item
Rule 12    _2_ClassMemberDefinition_item -> ClassMemberDefinition
Rule 13    RepeatClassMemberDefinition -> empty
Rule 14    RepeatClassMemberDefinition -> RepeatClassMemberDefinition ClassMemberDefinition
Rule 15    Type -> IDENTIFIER  [precedence=left, level=10]
Rule 16    Type -> STRING
Rule 17    Type -> BOOL
Rule 18    Type -> KEYWORDCHAR
Rule 19    Type -> INT
Rule 20    Type -> VOID
Rule 21    Modifier -> PRIVATE
Rule 22    Modifier -> PUBLIC
Rule 23    ClassMemberDefinition -> ConstructorDeclaration
Rule 24    ClassMemberDefinition -> DataMemberDeclaration
Rule 25    ClassMemberDefinition -> MethodDeclaration
Rule 26    DataMemberDeclaration -> Modifier VariableDeclaration
Rule 27    MethodDeclaration -> Modifier Type OptionalBrackets IDENTIFIER MethodSuffix  [precedence=left, level=10]
Rule 28    OptionalBrackets -> empty
Rule 29    OptionalBrackets -> LBRACKET RBRACKET
Rule 30    ConstructorDeclaration -> IDENTIFIER MethodSuffix  [precedence=left, level=10]
Rule 31    Initializer -> EQUALS Expression  [precedence=right, level=1]
Rule 32    MethodSuffix -> LPAREN OptionalParameterList RPAREN MethodBody  [precedence=left, level=11]
Rule 33    OptionalParameterList -> empty
Rule 34    OptionalParameterList -> ParameterList
Rule 35    MethodBody -> LBRACE RepeatStatement RBRACE
Rule 36    RepeatStatement -> empty
Rule 37    RepeatStatement -> RepeatStatement Statement
Rule 38    ParameterList -> Parameter RepeatCommaParameter
Rule 39    RepeatCommaParameter -> empty
Rule 40    RepeatCommaParameter -> RepeatCommaParameter COMMA Parameter
Rule 41    Parameter -> Type OptionalBrackets IDENTIFIER  [precedence=left, level=10]
Rule 42    VariableDeclaration -> Type OptionalBrackets IDENTIFIER OptionalInitializer SEMICOLON
Rule 43    OptionalInitializer -> empty
Rule 44    OptionalInitializer -> Initializer
Rule 45    Statement -> VariableDeclaration
Rule 46    Statement -> BREAK SEMICOLON
Rule 47    Statement -> SWITCH LPAREN Expression RPAREN CaseBlock  [precedence=left, level=11]
Rule 48    Statement -> CIN RIGHTSHIFT Expression SEMICOLON
Rule 49    Statement -> COUT LEFTSHIFT Expression SEMICOLON
Rule 50    Statement -> RETURN OptionalExpression SEMICOLON
Rule 51    Statement -> WHILE LPAREN Expression RPAREN Statement  [precedence=left, level=11]
Rule 52    Statement -> IF LPAREN Expression RPAREN Statement OptionalElseStatement  [precedence=left, level=11]
Rule 53    Statement -> Expression SEMICOLON
Rule 54    Statement -> LBRACE RepeatStatement RBRACE
Rule 55    OptionalElseStatement -> empty
Rule 56    OptionalElseStatement -> ELSE Statement
Rule 57    OptionalExpression -> empty
Rule 58    OptionalExpression -> Expression
Rule 59    CaseBlock -> LBRACE RepeatCase DEFAULT COLON RepeatStatement RBRACE
Rule 60    RepeatCase -> empty
Rule 61    RepeatCase -> RepeatCase Case
Rule 62    Case -> CASE CHAR_LITERAL COLON RepeatStatement
Rule 63    Case -> CASE NUM_LITERAL COLON RepeatStatement
Rule 64    Expression -> Expression Arguments
Rule 65    Expression -> Expression Index
Rule 66    Expression -> Expression PERIOD IDENTIFIER  [precedence=left, level=10]
Rule 67    Expression -> THIS  [precedence=left, level=9]
Rule 68    Expression -> NEW Type Index  [precedence=right, level=8]
Rule 69    Expression -> NEW Type Arguments  [precedence=right, level=8]
Rule 70    Expression -> IDENTIFIER  [precedence=left, level=10]
Rule 71    Expression -> NULL  [precedence=left, level=10]
Rule 72    Expression -> FALSE  [precedence=left, level=10]
Rule 73    Expression -> TRUE  [precedence=left, level=10]
Rule 74    Expression -> STRING_LITERAL  [precedence=left, level=10]
Rule 75    Expression -> CHAR_LITERAL  [precedence=left, level=10]
Rule 76    Expression -> NUM_LITERAL  [precedence=left, level=10]
Rule 77    Expression -> MINUS Expression  [precedence=left, level=6]
Rule 78    Expression -> PLUS Expression  [precedence=left, level=6]
Rule 79    Expression -> EXCLAMATIONMARK Expression  [precedence=right, level=8]
Rule 80    Expression -> Expression OR Expression  [precedence=left, level=3]
Rule 81    Expression -> Expression AND Expression  [precedence=left, level=3]
Rule 82    Expression -> Expression GREATEROREQUAL Expression  [precedence=left, level=5]
Rule 83    Expression -> Expression LESSOREQUAL Expression  [precedence=left, level=5]
Rule 84    Expression -> Expression GREATERTHAN Expression  [precedence=left, level=5]
Rule 85    Expression -> Expression LESSTHAN Expression  [precedence=left, level=5]
Rule 86    Expression -> Expression NOTEQUALS Expression  [precedence=left, level=4]
Rule 87    Expression -> Expression DOUBLEEQUALS Expression  [precedence=left, level=4]
Rule 88    Expression -> Expression DIVIDE Expression  [precedence=left, level=7]
Rule 89    Expression -> Expression TIMES Expression  [precedence=left, level=7]
Rule 90    Expression -> Expression MINUS Expression  [precedence=left, level=6]
Rule 91    Expression -> Expression PLUS Expression  [precedence=left, level=6]
Rule 92    Expression -> Expression DIVIDEEQUALS Expression  [precedence=right, level=2]
Rule 93    Expression -> Expression TIMESEQUALS Expression  [precedence=right, level=2]
Rule 94    Expression -> Expression MINUSEQUALS Expression  [precedence=right, level=1]
Rule 95    Expression -> Expression PLUSEQUALS Expression  [precedence=right, level=1]
Rule 96    Expression -> Expression EQUALS Expression  [precedence=right, level=1]
Rule 97    Expression -> LPAREN Expression RPAREN  [precedence=left, level=11]
Rule 98    Arguments -> LPAREN OptionalArgumentList RPAREN  [precedence=left, level=11]
Rule 99    OptionalArgumentList -> empty
Rule 100   OptionalArgumentList -> ArgumentList
Rule 101   ArgumentList -> Expression RepeatCommaExpression
Rule 102   RepeatCommaExpression -> empty
Rule 103   RepeatCommaExpression -> RepeatCommaExpression COMMA Expression
Rule 104   Index -> LBRACKET Expression RBRACKET
Rule 105   empty -> <empty>

Terminals, with rules where they appear:

AND                  : 81
BOOL                 : 17
BREAK                : 46
CASE                 : 62 63
CHAR_LITERAL         : 62 75
CIN                  : 48
CLASS                : 7
COLON                : 59 62 63
COMMA                : 40 103
COUT                 : 49
DEFAULT              : 59
DIVIDE               : 88
DIVIDEEQUALS         : 92
DOUBLEEQUALS         : 87
ELSE                 : 56
EQUALS               : 31 96
EXCLAMATIONMARK      : 79
FALSE                : 72
GREATEROREQUAL       : 82
GREATERTHAN          : 84
IDENTIFIER           : 7 15 27 30 41 42 66 70
IF                   : 52
INT                  : 19
KEYWORDCHAR          : 18
KXI2022              : 1
LBRACE               : 7 35 54 59
LBRACKET             : 29 104
LEFTSHIFT            : 49
LESSOREQUAL          : 83
LESSTHAN             : 85
LPAREN               : 1 32 47 51 52 97 98
MAIN                 : 1
MINUS                : 77 90
MINUSEQUALS          : 94
NEW                  : 68 69
NOTEQUALS            : 86
NULL                 : 71
NUM_LITERAL          : 63 76
OR                   : 80
PERIOD               : 66
PLUS                 : 78 91
PLUSEQUALS           : 95
PRIVATE              : 21
PUBLIC               : 22
RBRACE               : 7 35 54 59
RBRACKET             : 29 104
RETURN               : 50
RIGHTSHIFT           : 48
RPAREN               : 1 32 47 51 52 97 98
SEMICOLON            : 42 46 48 49 50 53
STRING               : 16
STRING_LITERAL       : 74
SWITCH               : 47
THIS                 : 67
TIMES                : 89
TIMESEQUALS          : 93
TRUE                 : 73
VOID                 : 1 20
WHILE                : 51
error                : 

Nonterminals, with rules where they appear:

ArgumentList         : 100
Arguments            : 64 69
Case                 : 61
CaseBlock            : 47
ClassDefinition      : 6
ClassMemberDefinition : 12 14
CompilationUnit      : 0
ConstructorDeclaration : 23
DataMemberDeclaration : 24
Expression           : 31 47 48 49 51 52 53 58 64 65 66 77 78 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 101 103 104
Index                : 65 68
Initializer          : 44
MethodBody           : 1 32
MethodDeclaration    : 25
MethodSuffix         : 27 30
Modifier             : 26 27
OptionalArgumentList : 98
OptionalBrackets     : 27 41 42
OptionalElseStatement : 52
OptionalExpression   : 50
OptionalInitializer  : 42
OptionalParameterList : 32
Parameter            : 38 40
ParameterList        : 34
RepeatCase           : 59 61
RepeatClassMemberDefinition : 14
RepeatCommaExpression : 101 103
RepeatCommaParameter : 38 40
RepeatStatement      : 35 37 54 59 62 63
Statement            : 37 51 52 56
Type                 : 27 41 42 68 69
VariableDeclaration  : 26 45
_1_ClassDefinition_item : 4 5
_1_ClassDefinition_items : 2 4
_1_ClassDefinition_repeat : 1
_2_ClassMemberDefinition_item : 10 11
_2_ClassMemberDefinition_items : 8 10
_2_ClassMemberDefinition_repeat : 7
empty                : 13 28 33 36 39 43 55 57 60 99 102


state 0

    (0) S' -> . CompilationUnit
    (1) CompilationUnit -> . _1_ClassDefinition_repeat VOID KXI2022 MAIN LPAREN RPAREN MethodBody
    (2) _1_ClassDefinition_repeat -> . _1_ClassDefinition_items
    (3) _1_ClassDefinition_repeat -> .
    (4) _1_ClassDefinition_items -> . _1_ClassDefinition_items _1_ClassDefinition_item
    (5) _1_ClassDefinition_items -> . _1_ClassDefinition_item
    (6) _1_ClassDefinition_item -> . ClassDefinition
    (7) ClassDefinition -> . CLASS IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat RBRACE
    VOID            reduce using rule 3 (_1_ClassDefinition_repeat -> .)
    CLASS           shift and go to state 6

    CompilationUnit                shift and go to state 1
    _1_ClassDefinition_repeat      shift and go to state 2
    _1_ClassDefinition_items       shift and go to state 3
    _1_ClassDefinition_item        shift and go to state 4
    ClassDefinition                shift and go to state 5

state 1

    (0) S' -> CompilationUnit .


state 2

    (1) CompilationUnit -> _1_ClassDefinition_repeat . VOID KXI2022 MAIN LPAREN RPAREN MethodBody
    VOID            shift and go to state 7


state 3

    (2) _1_ClassDefinition_repeat -> _1_ClassDefinition_items .
    (4) _1_ClassDefinition_items -> _1_ClassDefinition_items . _1_ClassDefinition_item
    (6) _1_ClassDefinition_item -> . ClassDefinition
    (7) ClassDefinition -> . CLASS IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat RBRACE
    VOID            reduce using rule 2 (_1_ClassDefinition_repeat -> _1_ClassDefinition_items .)
    CLASS           shift and go to state 6

    _1_ClassDefinition_item        shift and go to state 8
    ClassDefinition                shift and go to state 5

state 4

    (5) _1_ClassDefinition_items -> _1_ClassDefinition_item .
    CLASS           reduce using rule 5 (_1_ClassDefinition_items -> _1_ClassDefinition_item .)
    VOID            reduce using rule 5 (_1_ClassDefinition_items -> _1_ClassDefinition_item .)


state 5

    (6) _1_ClassDefinition_item -> ClassDefinition .
    CLASS           reduce using rule 6 (_1_ClassDefinition_item -> ClassDefinition .)
    VOID            reduce using rule 6 (_1_ClassDefinition_item -> ClassDefinition .)


state 6

    (7) ClassDefinition -> CLASS . IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat RBRACE
    IDENTIFIER      shift and go to state 9


state 7

    (1) CompilationUnit -> _1_ClassDefinition_repeat VOID . KXI2022 MAIN LPAREN RPAREN MethodBody
    KXI2022         shift and go to state 10


state 8

    (4) _1_ClassDefinition_items -> _1_ClassDefinition_items _1_ClassDefinition_item .
    CLASS           reduce using rule 4 (_1_ClassDefinition_items -> _1_ClassDefinition_items _1_ClassDefinition_item .)
    VOID            reduce using rule 4 (_1_ClassDefinition_items -> _1_ClassDefinition_items _1_ClassDefinition_item .)


state 9

    (7) ClassDefinition -> CLASS IDENTIFIER . LBRACE _2_ClassMemberDefinition_repeat RBRACE
    LBRACE          shift and go to state 11


state 10

    (1) CompilationUnit -> _1_ClassDefinition_repeat VOID KXI2022 . MAIN LPAREN RPAREN MethodBody
    MAIN            shift and go to state 12


state 11

    (7) ClassDefinition -> CLASS IDENTIFIER LBRACE . _2_ClassMemberDefinition_repeat RBRACE
    (8) _2_ClassMemberDefinition_repeat -> . _2_ClassMemberDefinition_items
    (9) _2_ClassMemberDefinition_repeat -> .
    (10) _2_ClassMemberDefinition_items -> . _2_ClassMemberDefinition_items _2_ClassMemberDefinition_item
    (11) _2_ClassMemberDefinition_items -> . _2_ClassMemberDefinition_item
    (12) _2_ClassMemberDefinition_item -> . ClassMemberDefinition
    (23) ClassMemberDefinition -> . ConstructorDeclaration
    (24) ClassMemberDefinition -> . DataMemberDeclaration
    (25) ClassMemberDefinition -> . MethodDeclaration
    (30) ConstructorDeclaration -> . IDENTIFIER MethodSuffix
    (26) DataMemberDeclaration -> . Modifier VariableDeclaration
    (27) MethodDeclaration -> . Modifier Type OptionalBrackets IDENTIFIER MethodSuffix
    (21) Modifier -> . PRIVATE
    (22) Modifier -> . PUBLIC
    RBRACE          reduce using rule 9 (_2_ClassMemberDefinition_repeat -> .)
    IDENTIFIER      shift and go to state 13
    PRIVATE         shift and go to state 22
    PUBLIC          shift and go to state 23

    _2_ClassMemberDefinition_repeat shift and go to state 14
    _2_ClassMemberDefinition_items shift and go to state 15
    _2_ClassMemberDefinition_item  shift and go to state 16
    ClassMemberDefinition          shift and go to state 17
    ConstructorDeclaration         shift and go to state 18
    DataMemberDeclaration          shift and go to state 19
    MethodDeclaration              shift and go to state 20
    Modifier                       shift and go to state 21

state 12

    (1) CompilationUnit -> _1_ClassDefinition_repeat VOID KXI2022 MAIN . LPAREN RPAREN MethodBody
    LPAREN          shift and go to state 24


state 13

    (30) ConstructorDeclaration -> IDENTIFIER . MethodSuffix
    (32) MethodSuffix -> . LPAREN OptionalParameterList RPAREN MethodBody
    LPAREN          shift and go to state 26

    MethodSuffix                   shift and go to state 25

state 14

    (7) ClassDefinition -> CLASS IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat . RBRACE
    RBRACE          shift and go to state 27


state 15

    (8) _2_ClassMemberDefinition_repeat -> _2_ClassMemberDefinition_items .
    (10) _2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_items . _2_ClassMemberDefinition_item
    (12) _2_ClassMemberDefinition_item -> . ClassMemberDefinition
    (23) ClassMemberDefinition -> . ConstructorDeclaration
    (24) ClassMemberDefinition -> . DataMemberDeclaration
    (25) ClassMemberDefinition -> . MethodDeclaration
    (30) ConstructorDeclaration -> . IDENTIFIER MethodSuffix
    (26) DataMemberDeclaration -> . Modifier VariableDeclaration
    (27) MethodDeclaration -> . Modifier Type OptionalBrackets IDENTIFIER MethodSuffix
    (21) Modifier -> . PRIVATE
    (22) Modifier -> . PUBLIC
    RBRACE          reduce using rule 8 (_2_ClassMemberDefinition_repeat -> _2_ClassMemberDefinition_items .)
    IDENTIFIER      shift and go to state 13
    PRIVATE         shift and go to state 22
    PUBLIC          shift and go to state 23

    _2_ClassMemberDefinition_item  shift and go to state 28
    ClassMemberDefinition          shift and go to state 17
    ConstructorDeclaration         shift and go to state 18
    DataMemberDeclaration          shift and go to state 19
    MethodDeclaration              shift and go to state 20
    Modifier                       shift and go to state 21

state 16

    (11) _2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_item .
    IDENTIFIER      reduce using rule 11 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_item .)
    PRIVATE         reduce using rule 11 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_item .)
    PUBLIC          reduce using rule 11 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_item .)
    RBRACE          reduce using rule 11 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_item .)


state 17

    (12) _2_ClassMemberDefinition_item -> ClassMemberDefinition .
    IDENTIFIER      reduce using rule 12 (_2_ClassMemberDefinition_item -> ClassMemberDefinition .)
    PRIVATE         reduce using rule 12 (_2_ClassMemberDefinition_item -> ClassMemberDefinition .)
    PUBLIC          reduce using rule 12 (_2_ClassMemberDefinition_item -> ClassMemberDefinition .)
    RBRACE          reduce using rule 12 (_2_ClassMemberDefinition_item -> ClassMemberDefinition .)


state 18

    (23) ClassMemberDefinition -> ConstructorDeclaration .
    IDENTIFIER      reduce using rule 23 (ClassMemberDefinition -> ConstructorDeclaration .)
    PRIVATE         reduce using rule 23 (ClassMemberDefinition -> ConstructorDeclaration .)
    PUBLIC          reduce using rule 23 (ClassMemberDefinition -> ConstructorDeclaration .)
    RBRACE          reduce using rule 23 (ClassMemberDefinition -> ConstructorDeclaration .)


state 19

    (24) ClassMemberDefinition -> DataMemberDeclaration .
    IDENTIFIER      reduce using rule 24 (ClassMemberDefinition -> DataMemberDeclaration .)
    PRIVATE         reduce using rule 24 (ClassMemberDefinition -> DataMemberDeclaration .)
    PUBLIC          reduce using rule 24 (ClassMemberDefinition -> DataMemberDeclaration .)
    RBRACE          reduce using rule 24 (ClassMemberDefinition -> DataMemberDeclaration .)


state 20

    (25) ClassMemberDefinition -> MethodDeclaration .
    IDENTIFIER      reduce using rule 25 (ClassMemberDefinition -> MethodDeclaration .)
    PRIVATE         reduce using rule 25 (ClassMemberDefinition -> MethodDeclaration .)
    PUBLIC          reduce using rule 25 (ClassMemberDefinition -> MethodDeclaration .)
    RBRACE          reduce using rule 25 (ClassMemberDefinition -> MethodDeclaration .)


state 21

    (26) DataMemberDeclaration -> Modifier . VariableDeclaration
    (27) MethodDeclaration -> Modifier . Type OptionalBrackets IDENTIFIER MethodSuffix
    (42) VariableDeclaration -> . Type OptionalBrackets IDENTIFIER OptionalInitializer SEMICOLON
    (15) Type -> . IDENTIFIER
    (16) Type -> . STRING
    (17) Type -> . BOOL
    (18) Type -> . KEYWORDCHAR
    (19) Type -> . INT
    (20) Type -> . VOID
    IDENTIFIER      shift and go to state 31
    STRING          shift and go to state 32
    BOOL            shift and go to state 33
    KEYWORDCHAR     shift and go to state 34
    INT             shift and go to state 35
    VOID            shift and go to state 36

    VariableDeclaration            shift and go to state 29
    Type                           shift and go to state 30

state 22

    (21) Modifier -> PRIVATE .
    IDENTIFIER      reduce using rule 21 (Modifier -> PRIVATE .)
    STRING          reduce using rule 21 (Modifier -> PRIVATE .)
    BOOL            reduce using rule 21 (Modifier -> PRIVATE .)
    KEYWORDCHAR     reduce using rule 21 (Modifier -> PRIVATE .)
    INT             reduce using rule 21 (Modifier -> PRIVATE .)
    VOID            reduce using rule 21 (Modifier -> PRIVATE .)


state 23

    (22) Modifier -> PUBLIC .
    IDENTIFIER      reduce using rule 22 (Modifier -> PUBLIC .)
    STRING          reduce using rule 22 (Modifier -> PUBLIC .)
    BOOL            reduce using rule 22 (Modifier -> PUBLIC .)
    KEYWORDCHAR     reduce using rule 22 (Modifier -> PUBLIC .)
    INT             reduce using rule 22 (Modifier -> PUBLIC .)
    VOID            reduce using rule 22 (Modifier -> PUBLIC .)


state 24

    (1) CompilationUnit -> _1_ClassDefinition_repeat VOID KXI2022 MAIN LPAREN . RPAREN MethodBody
    RPAREN          shift and go to state 37


state 25

    (30) ConstructorDeclaration -> IDENTIFIER MethodSuffix .
    IDENTIFIER      reduce using rule 30 (ConstructorDeclaration -> IDENTIFIER MethodSuffix .)
    PRIVATE         reduce using rule 30 (ConstructorDeclaration -> IDENTIFIER MethodSuffix .)
    PUBLIC          reduce using rule 30 (ConstructorDeclaration -> IDENTIFIER MethodSuffix .)
    RBRACE          reduce using rule 30 (ConstructorDeclaration -> IDENTIFIER MethodSuffix .)


state 26

    (32) MethodSuffix -> LPAREN . OptionalParameterList RPAREN MethodBody
    (33) OptionalParameterList -> . empty
    (34) OptionalParameterList -> . ParameterList
    (105) empty -> .
    (38) ParameterList -> . Parameter RepeatCommaParameter
    (41) Parameter -> . Type OptionalBrackets IDENTIFIER
    (15) Type -> . IDENTIFIER
    (16) Type -> . STRING
    (17) Type -> . BOOL
    (18) Type -> . KEYWORDCHAR
    (19) Type -> . INT
    (20) Type -> . VOID
    RPAREN          reduce using rule 105 (empty -> .)
    IDENTIFIER      shift and go to state 31
    STRING          shift and go to state 32
    BOOL            shift and go to state 33
    KEYWORDCHAR     shift and go to state 34
    INT             shift and go to state 35
    VOID            shift and go to state 36

    OptionalParameterList          shift and go to state 38
    empty                          shift and go to state 39
    ParameterList                  shift and go to state 40
    Parameter                      shift and go to state 41
    Type                           shift and go to state 42

state 27

    (7) ClassDefinition -> CLASS IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat RBRACE .
    CLASS           reduce using rule 7 (ClassDefinition -> CLASS IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat RBRACE .)
    VOID            reduce using rule 7 (ClassDefinition -> CLASS IDENTIFIER LBRACE _2_ClassMemberDefinition_repeat RBRACE .)


state 28

    (10) _2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_items _2_ClassMemberDefinition_item .
    IDENTIFIER      reduce using rule 10 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_items _2_ClassMemberDefinition_item .)
    PRIVATE         reduce using rule 10 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_items _2_ClassMemberDefinition_item .)
    PUBLIC          reduce using rule 10 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_items _2_ClassMemberDefinition_item .)
    RBRACE          reduce using rule 10 (_2_ClassMemberDefinition_items -> _2_ClassMemberDefinition_items _2_ClassMemberDefinition_item .)


state 29

    (26) DataMemberDeclaration -> Modifier VariableDeclaration .
    IDENTIFIER      reduce using rule 26 (DataMemberDeclaration -> Modifier VariableDeclaration .)
    PRIVATE         reduce using rule 26 (DataMemberDeclaration -> Modifier VariableDeclaration .)
    PUBLIC          reduce using rule 26 (DataMemberDeclaration -> Modifier VariableDeclaration .)
    RBRACE          reduce using rule 26 (DataMemberDeclaration -> Modifier VariableDeclaration .)


state 30

    (27) MethodDeclaration -> Modifier Type . OptionalBrackets IDENTIFIER MethodSuffix
    (42) VariableDeclaration -> Type . OptionalBrackets IDENTIFIER OptionalInitializer SEMICOLON
    (28) OptionalBrackets -> . empty
    (29) OptionalBrackets -> . LBRACKET RBRACKET
    (105) empty -> .
    LBRACKET        shift and go to state 45
    IDENTIFIER      reduce using rule 105 (empty -> .)

    OptionalBrackets               shift and go to state 43
    empty                          shift and go to state 44

state 31

    (15) Type -> IDENTIFIER .
    LBRACKET        reduce using rule 15 (Type -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 15 (Type -> IDENTIFIER .)
    LPAREN          reduce using rule 15 (Type -> IDENTIFIER .)


state 32

    (16) Type -> STRING .
    LBRACKET        reduce using rule 16 (Type -> STRING .)
    IDENTIFIER      reduce using rule 16 (Type -> STRING .)
    LPAREN          reduce using rule 16 (Type -> STRING .)


state 33

    (17) Type -> BOOL .
    LBRACKET        reduce using rule 17 (Type -> BOOL .)
    IDENTIFIER      reduce using rule 17 (Type -> BOOL .)
    LPAREN          reduce using rule 17 (Type -> BOOL .)


state 34

    (18) Type -> KEYWORDCHAR .
    LBRACKET        reduce using rule 18 (Type -> KEYWORDCHAR .)
    IDENTIFIER      reduce using rule 18 (Type -> KEYWORDCHAR .)
    LPAREN          reduce using rule 18 (Type -> KEYWORDCHAR .)


state 35

    (19) Type -> INT .
    LBRACKET        reduce using rule 19 (Type -> INT .)
    IDENTIFIER      reduce using rule 19 (Type -> INT .)
    LPAREN          reduce using rule 19 (Type -> INT .)


state 36

    (20) Type -> VOID .
    LBRACKET        reduce using rule 20 (Type -> VOID .)
    IDENTIFIER      reduce using rule 20 (Type -> VOID .)
    LPAREN          reduce using rule 20 (Type -> VOID .)


state 37

    (1) CompilationUnit -> _1_ClassDefinition_repeat VOID KXI2022 MAIN LPAREN RPAREN . MethodBody
    (35) MethodBody -> . LBRACE RepeatStatement RBRACE
    LBRACE          shift and go to state 47

    MethodBody                     shift and go to state 46

state 38

    (32) MethodSuffix -> LPAREN OptionalParameterList . RPAREN MethodBody
    RPAREN          shift and go to state 48


state 39

    (33) OptionalParameterList -> empty .
    RPAREN          reduce using rule 33 (OptionalParameterList -> empty .)


state 40

    (34) OptionalParameterList -> ParameterList .
    RPAREN          reduce using rule 34 (OptionalParameterList -> ParameterList .)


state 41

    (38) ParameterList -> Parameter . RepeatCommaParameter
    (39) RepeatCommaParameter -> . empty
    (40) RepeatCommaParameter -> . RepeatCommaParameter COMMA Parameter
    (105) empty -> .
    COMMA           reduce using rule 105 (empty -> .)
    RPAREN          reduce using rule 105 (empty -> .)

    RepeatCommaParameter           shift and go to state 49
    empty                          shift and go to state 50

state 42

    (41) Parameter -> Type . OptionalBrackets IDENTIFIER
    (28) OptionalBrackets -> . empty
    (29) OptionalBrackets -> . LBRACKET RBRACKET
    (105) empty -> .
    LBRACKET        shift and go to state 45
    IDENTIFIER      reduce using rule 105 (empty -> .)

    OptionalBrackets               shift and go to state 51
    empty                          shift and go to state 44

state 43

    (27) MethodDeclaration -> Modifier Type OptionalBrackets . IDENTIFIER MethodSuffix
    (42) VariableDeclaration -> Type OptionalBrackets . IDENTIFIER OptionalInitializer SEMICOLON
    IDENTIFIER      shift and go to state 52


state 44

    (28) OptionalBrackets -> empty .
    IDENTIFIER      reduce using rule 28 (OptionalBrackets -> empty .)


state 45

    (29) OptionalBrackets -> LBRACKET . RBRACKET
    RBRACKET        shift and go to state 53


state 46

    (1) CompilationUnit -> _1_ClassDefinition_repeat VOID KXI2022 MAIN LPAREN RPAREN MethodBody .
    $end            reduce using rule 1 (CompilationUnit -> _1_ClassDefinition_repeat VOID KXI2022 MAIN LPAREN RPAREN MethodBody .)


state 47

    (35) MethodBody -> LBRACE . RepeatStatement RBRACE
    (36) RepeatStatement -> . empty
    (37) RepeatStatement -> . RepeatStatement Statement
    (105) empty -> .
    RBRACE          reduce using rule 105 (empty -> .)
    BREAK           reduce using rule 105 (empty -> .)
    SWITCH          reduce using rule 105 (empty -> .)
    CIN             reduce using rule 105 (empty -> .)
    COUT            reduce using rule 105 (empty -> .)
    RETURN          reduce using rule 105 (empty -> .)
    WHILE           reduce using rule 105 (empty -> .)
    IF              reduce using rule 105 (empty -> .)
    LBRACE          reduce using rule 105 (empty -> .)
    THIS            reduce using rule 105 (empty -> .)
    NEW             reduce using rule 105 (empty -> .)
    IDENTIFIER      reduce using rule 105 (empty -> .)
    NULL            reduce using rule 105 (empty -> .)
    FALSE           reduce using rule 105 (empty -> .)
    TRUE            reduce using rule 105 (empty -> .)
    STRING_LITERAL  reduce using rule 105 (empty -> .)
    CHAR_LITERAL    reduce using rule 105 (empty -> .)
    NUM_LITERAL     reduce using rule 105 (empty -> .)
    MINUS           reduce using rule 105 (empty -> .)
    PLUS            reduce using rule 105 (empty -> .)
    EXCLAMATIONMARK reduce using rule 105 (empty -> .)
    LPAREN          reduce using rule 105 (empty -> .)
    STRING          reduce using rule 105 (empty -> .)
    BOOL            reduce using rule 105 (empty -> .)
    KEYWORDCHAR     reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    VOID            reduce using rule 105 (empty -> .)

    RepeatStatement                shift and go to state 54
    empty                          shift and go to state 55

state 48

    (32) MethodSuffix -> LPAREN OptionalParameterList RPAREN . MethodBody
    (35) MethodBody -> . LBRACE RepeatStatement RBRACE
    LBRACE          shift and go to state 47

    MethodBody                     shift and go to state 56

state 49

    (38) ParameterList -> Parameter RepeatCommaParameter .
    (40) RepeatCommaParameter -> RepeatCommaParameter . COMMA Parameter
    RPAREN          reduce using rule 38 (ParameterList -> Parameter RepeatCommaParameter .)
    COMMA           shift and go to state 57


state 50

    (39) RepeatCommaParameter -> empty .
    COMMA           reduce using rule 39 (RepeatCommaParameter -> empty .)
    RPAREN          reduce using rule 39 (RepeatCommaParameter -> empty .)


state 51

    (41) Parameter -> Type OptionalBrackets . IDENTIFIER
    IDENTIFIER      shift and go to state 58


state 52

    (27) MethodDeclaration -> Modifier Type OptionalBrackets IDENTIFIER . MethodSuffix
    (42) VariableDeclaration -> Type OptionalBrackets IDENTIFIER . OptionalInitializer SEMICOLON
    (32) MethodSuffix -> . LPAREN OptionalParameterList RPAREN MethodBody
    (43) OptionalInitializer -> . empty
    (44) OptionalInitializer -> . Initializer
    (105) empty -> .
    (31) Initializer -> . EQUALS Expression
    LPAREN          shift and go to state 26
    SEMICOLON       reduce using rule 105 (empty -> .)
    EQUALS          shift and go to state 63

    MethodSuffix                   shift and go to state 59
    OptionalInitializer            shift and go to state 60
    empty                          shift and go to state 61
    Initializer                    shift and go to state 62

state 53

    (29) OptionalBrackets -> LBRACKET RBRACKET .
    IDENTIFIER      reduce using rule 29 (OptionalBrackets -> LBRACKET RBRACKET .)


state 54
